ITE/GCL4/KR409837/Sprawozdanie5/files/recreate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-hot-cold
  labels:
    app: react
spec:
  replicas: 15
  strategy:
    type : Recreate
  selector:
    matchLabels:
      app: react
  template:
    metadata:
      labels:
        app: react
    spec:
      containers:
      - name: react
        image: krezler21/react-hot-cold:0.2.0
        ports:
        - containerPort: 3000
