ITE/GCL4/KR409837/Sprawozdanie5/files/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport1
spec:
  type: NodePort
  selector:
    app: react
  ports:
  - nodePort: 32410
    protocol: TCP
    port: 3000
    targetPort: 3000
