ITE/GCL4/KR409837/Sprawozdanie5/files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react
spec:
  type: NodePort
  selector:
    app: react
  ports:
    - nodePort: 32137
      protocol: TCP
      port: 3000
      targetPort: 3000
